fix popup screen z-index

--- a/src/style.css
+++ b/src/style.css
@@ -599,6 +599,7 @@ input, textarea, select {
     left: 0;
     height: 100vh;
     width: 100vw;
+    z-index: 100;
 }
 
 .popup-fade {
